crates/reinhardt-pages/tests/ui/form/fail/char_field_with_generic.stderr
error: CharField does not accept a type parameter
  --> tests/ui/form/fail/char_field_with_generic.rs:12:14
   |
12 |             username: CharField<i32> { },
   |                       ^^^^^^^^^
